Actualizar UI Favoritos: cabecera, formulario responsive, pruebas y limpieza de pom